--- a/UWP/project.json
+++ b/UWP/project.json
@@ -15,5 +15,8 @@
     "win10-x86-aot": {},
     "win10-x64": {},
     "win10-x64-aot": {}
+  },
+  "frameworkAssemblies": {
+    "System.Runtime": ""
   }
 }
