--- a/Cognitive/CognitiveServisesVisionLibrary/CognitiveServisesVisionLibrary/CognitiveServisesVisionLibrary.csproj
+++ b/Cognitive/CognitiveServisesVisionLibrary/CognitiveServisesVisionLibrary/CognitiveServisesVisionLibrary.csproj
@@ -22,7 +22,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Integrate3\Assets\Plugins\</OutputPath>
+    <OutputPath>..\..\..\Assets\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
